# gewr

./: Cargo.toml  LICENSE  README.md
crates/app/: Cargo.toml
crates/assets/: Cargo.toml
crates/audio/: Cargo.toml
crates/ecs/: Cargo.toml
crates/engine_core/: Cargo.toml
crates/input/: Cargo.toml
crates/math/: Cargo.toml
crates/platform/: Cargo.toml
crates/render/: Cargo.toml
docs/: Наши хотелки с учётом времени.md  Практическая работа - Дорожная карта.docx  Практическая работа - Список задач.docx  Проектная деятельность.docx  Стек технологий.md
docs/.obsidian/: workspace.json
