[workspace]
resolver = "2"
members = [
  "crates/engine_core",
  "crates/ecs",
  "crates/math",
  "crates/render",
  "crates/assets",
  "crates/input",
  "crates/audio",
  "crates/platform",
  "crates/app",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# shared deps go here
